--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.9.3",
+    "@material-ui/icons": "^3.0.2",
+    "@material-ui/styles": "^3.0.0-alpha.10",
     "@types/jest": "24.0.11",
     "@types/node": "11.13.0",
     "@types/react": "16.8.12",
@@ -10,6 +13,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8",
+    "redux": "^4.0.1",
     "typescript": "3.4.1"
   },
   "scripts": {
@@ -28,6 +32,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@types/redux": "^3.6.0",
     "prettier": "^1.16.4"
   }
 }
