--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@types/react-dom": "16.8.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.0",
     "react-scripts": "2.1.8",
+    "react-yandex-maps": "^3.0.2",
     "redux": "^4.0.1",
     "typescript": "3.4.1"
   },
@@ -32,7 +34,9 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@types/react-helmet": "^5.0.8",
     "@types/redux": "^3.6.0",
+    "@types/yandex-maps": "^2.1.5",
     "prettier": "^1.16.4"
   }
 }
