--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "11.13.0",
     "@types/react": "16.8.12",
     "@types/react-dom": "16.8.3",
+    "classnames": "^2.2.6",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.0",
@@ -34,6 +35,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@types/classnames": "^2.2.7",
     "@types/react-helmet": "^5.0.8",
     "@types/redux": "^3.6.0",
     "@types/yandex-maps": "^2.1.5",
