--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "16.8.12",
     "@types/react-dom": "16.8.3",
     "classnames": "^2.2.6",
+    "date-fns": "^1.30.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.0",
@@ -36,6 +37,7 @@
   ],
   "devDependencies": {
     "@types/classnames": "^2.2.7",
+    "@types/date-fns": "^2.6.0",
     "@types/react-helmet": "^5.0.8",
     "@types/redux": "^3.6.0",
     "@types/yandex-maps": "^2.1.5",
