--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@types/node": "11.13.0",
     "@types/react": "16.8.12",
     "@types/react-dom": "16.8.3",
+    "chart.js": "^2.8.0",
     "classnames": "^2.2.6",
     "date-fns": "^1.30.1",
     "react": "^16.8.6",
+    "react-chartjs-2": "^2.7.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.0",
     "react-scripts": "2.1.8",
@@ -38,6 +40,7 @@
   "devDependencies": {
     "@types/classnames": "^2.2.7",
     "@types/date-fns": "^2.6.0",
+    "@types/react-chartjs-2": "^2.5.7",
     "@types/react-helmet": "^5.0.8",
     "@types/redux": "^3.6.0",
     "@types/yandex-maps": "^2.1.5",
