--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-chartjs-2": "^2.7.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.0",
+    "react-router": "^5.0.0",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
     "react-yandex-maps": "^3.0.2",
     "redux": "^4.0.1",
@@ -42,6 +44,8 @@
     "@types/date-fns": "^2.6.0",
     "@types/react-chartjs-2": "^2.5.7",
     "@types/react-helmet": "^5.0.8",
+    "@types/react-router": "^4.4.5",
+    "@types/react-router-dom": "^4.3.1",
     "@types/redux": "^3.6.0",
     "@types/yandex-maps": "^2.1.5",
     "prettier": "^1.16.4"
