--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "chart.js": "^2.8.0",
     "classnames": "^2.2.6",
     "date-fns": "^1.30.1",
+    "js-cookie": "^2.2.0",
     "react": "^16.8.6",
     "react-chartjs-2": "^2.7.6",
     "react-dom": "^16.8.6",
@@ -42,6 +43,7 @@
   "devDependencies": {
     "@types/classnames": "^2.2.7",
     "@types/date-fns": "^2.6.0",
+    "@types/js-cookie": "^2.2.2",
     "@types/react-chartjs-2": "^2.5.7",
     "@types/react-helmet": "^5.0.8",
     "@types/react-router": "^4.4.5",
