--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
+    "react-select": "^2.4.2",
     "react-yandex-maps": "^3.0.2",
     "redux": "^4.0.1",
     "typescript": "3.4.1"
@@ -48,6 +49,7 @@
     "@types/react-helmet": "^5.0.8",
     "@types/react-router": "^4.4.5",
     "@types/react-router-dom": "^4.3.1",
+    "@types/react-select": "^2.0.15",
     "@types/redux": "^3.6.0",
     "@types/yandex-maps": "^2.1.5",
     "prettier": "^1.16.4"
